# Eurobot2024

./: .gitignore  .gitmodules  LICENSE  README.md
ROS-Behavior-Tree/behavior_tree_core/action/: BT.action
aruco_opencv_msgs/: CMakeLists.txt
aruco_robot/: CMakeLists.txt  package.xml
aruco_robot/cfg_nav/: base_local_planner_holonomic_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  neo_local_planner_params.yaml  teb_local_planner_holonomic_params copy.yaml  teb_local_planner_params.yaml
aruco_robot/config/: camera_info.yaml  ekf_map.yaml  ekf_odom.yaml  params_1.yaml
aruco_robot/costmap_cfg/: global_costmap_params.yaml  local_costmap_params.yaml
aruco_robot/costmap_param/: costmap_common_params.yaml
aruco_robot/ekf_config/: ekf_map.yaml  ekf_odom.yaml
aruco_robot/launch/: amcl.launch  autostart.launch  camera_start.launch  ekf.launch  localization.launch  move_base.launch  robot_pose.launch  strat.launch
aruco_robot/map/: map_1.pgm  map_1.yaml
aruco_robot/nav_cfg/: dwa_local_planner_params.yaml  move_base_params.yaml  neo_local_planner_params.yaml  teb_local_planner_params.yaml
aruco_robot/rviz/: default.rviz
aruco_robot/src/: map_publisher.py  robot_pose.py
aruco_strategy/: CMakeLists.txt  package.xml
aruco_strategy/include/: button_check.h  gripper_move.h  push_plan.h  timer_stop.h  unmanaged_control.h
aruco_strategy/launch/: gomo.launch  ne_robot_x_yellow.launch  reset_blue.launch  reset_yellow.launch  strategy_blue.launch  strategy_yellow.launch
aruco_strategy/src/: button_check.cpp  gripper_move.cpp  main.cpp  main_blue.cpp  main_gomo.cpp  main_ne_robot_yel.cpp  main_reset_blue.cpp  main_reset_yellow.cpp  main_yellow.cpp  push_plan.cpp  safety_control.cpp  timer_stop.cpp  unmanaged_control.cpp
aruco_to_robot_pose/: CMakeLists.txt  package.xml
aruco_to_robot_pose/launch/: robot_pose.launch
aruco_to_robot_pose/src/: aruco_robot_convertor.cpp
autorun/: CMakeLists.txt  package.xml
autorun/config/: common.yml  scan_matcher.yml
autorun/launch/: start.launch
autorun/src/: pose_stamped_republisher.py  static_tf2_broadcaster.py
driver_interaction/: CMakeLists.txt  package.xml
driver_interaction/config/: USB.yml
driver_interaction/launch/: driver_connection.launch
driver_interaction/src/: serial_pub_odometry.py  serial_write_vel.py
energybot1/: CMakeLists.txt  package.xml
energybot1_driver_interaction/: CMakeLists.txt  package.xml
energybot1_driver_interaction/config/: common.yaml
energybot1_driver_interaction/launch/: driver_connection.launch
energybot1_driver_interaction/src/: serial_pub_odometry.py
energybot1_imu/: CMakeLists.txt  package.xml
energybot1_imu/config/: wt901.yml
energybot1_imu/src/: wt901_calibration.py
energybot1_lift/: CMakeLists.txt  package.xml
energybot1_lift/action/: Interface.action
energybot1_lift/src/: action.py
energybot1_navigation/: CMakeLists.txt  package.xml
energybot1_navigation/config/: common.yaml
energybot1_navigation/ekf_config/: ekf_map.yaml
energybot1_navigation/launch/: amcl.launch  camera_start.launch  ekf.launch  localization.launch  map_callibration.launch  move_base.launch  simstart.launch
energybot1_navigation/src/: robot_pose.py
energybot1_opencv/: CMakeLists.txt  package.xml
energybot1_opencv/launch/: detect.launch
energybot1_robot_setup/: CMakeLists.txt  package.xml
energybot1_robot_setup/config/: startup.yml
energybot1_robot_setup/launch/: start.launch
energybot1_strategy/: CMakeLists.txt  package.xml
energybot1_strategy/include/: button_check.h  gripper_move.h  push_plan.h  safety_control.h
energybot1_strategy/launch/: gomo.launch  strategy_blue.launch  strategy_ne_robot_x_yellow.launch  strategy_reset_blue.launch  strategy_reset_yellow.launch  strategy_yellow.launch
energybot1_strategy/src/BTloop/: main_blue.cpp  main_gomo.cpp  main_ne_robot_yel.cpp  main_reset_blue.cpp  main_reset_yellow.cpp  main_yellow.cpp
energybot1_strategy/src/node/: button_check.cpp  gripper_move.cpp  push_plan.cpp  safety_control.cpp  timer_stop.cpp
energybot1_teleop/: CMakeLists.txt  package.xml
energybot1_teleop/src/: teleop.py
energybot1_tools/aruco_to_robot_pose/: package.xml
energybot1_tools/aruco_to_robot_pose/src/: aruco_robot_convertor.cpp
energybot1_tools/energybot1_tools/: CMakeLists.txt  package.xml
energybot1_tools/process_pcl2/: CMakeLists.txt  package.xml
energybot1_tools/process_pcl2/launch/: process_pcl2.launch
energybot1_tools/timer_check/: package.xml
energybot1_tools/timer_check/src/: timer.py
liftAction/: CMakeLists.txt  package.xml
lift_action/: CMakeLists.txt  package.xml
lift_action/src/: action.py
neo_local_planner/: CMakeLists.txt
neo_local_planner/cfg/: NeoPlanner.cfg
neo_local_planner/include/: NeoLocalPlanner.h
neo_local_planner/src/: NeoLocalPlanner.cpp
odometry_publisher/: CMakeLists.txt  package.xml
odometry_publisher/launch/: odom_pub.launch
odometry_publisher/src/: odometry_script.py
process_pcl2/: package.xml
process_pcl2/cfg/: process.cfg
process_pcl2/launch/: process_pcl2.launch
process_pcl2/src/: process_pcl2.cpp
ros_aruco_opencv/aruco_opencv/: CMakeLists.txt
ros_aruco_opencv/aruco_opencv/config/: aruco_tracker.yaml
ros_aruco_opencv/aruco_opencv/launch/: aruco_tracker.launch
ros_aruco_opencv/aruco_opencv/src/: aruco_tracker.cpp
ros_aruco_opencv/aruco_opencv_msgs/srv/: MarkerSize.srv
rplidar_ros/launch/: my_slam_view.launch  rplidar_s2.launch
rplidar_ros/rviz/: VKR.rviz
scan_tools/scan_to_cloud_converter/launch/: scan_to_pcl2.launch
serial_connection/: package.xml
serial_connection/launch/: serial.launch
serial_connection/src/: serial_connection.py  test.py  test_scan.py
teleop/: CMakeLists.txt  package.xml
timer_check/: CMakeLists.txt  package.xml
timer_check/src/: timer.py
wt901/: CMakeLists.txt  package.xml
wt901/launch/: wt901.launch  wt901_calib.launch
wt901/src/: wt901_calibration.py  wt901_node.py  wt901_node_native_q.py
(+3 files in other folders)
