<?xml version="1.0"?>
<package format="2">
  <name>aruco_to_robot_pose</name>
  <version>0.0.1</version>
  <description>The aruco detection to robot pose converter package</description>

  <maintainer email="Vsevolod.Egorov@ronavi.ru">Vsevolod Egorov</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>aruco_opencv_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
