<?xml version="1.0"?>
<package format="2">
  <name>energybot1_navigation</name>
  <version>1.0.0</version>
  <description>energybot1_navigation package</description>

  <author     email="sewa.egorov@yandex.ru">Vsevolod Egorov</author>
  <maintainer email="sewa.egorov@yandex.ru">Vsevolod Egorov</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
